# AviSynthCUDAFilters

./: .gitmodules  AviSynthCUDAFilters.sln  Common.props  README.md  README_LINUX.md  boost_home.bat  cuda_path.bat  cudaver.props  meson.build  stdcpp14.patch
.github/workflows/: build_packages.yml  build_releases.yml
AvsCUDA/: AvsCUDA.cpp  AvsCUDA.h  AvsCUDA.rc  AvsCUDA.vcxproj  AvsCUDA.vcxproj.filters  AvsCUDAversion.h  meson.build
AvsCUDA/core/: internal.h
AvsCUDA/filters/: ConditionalFunctions.cu  Convert.cu  Filters.cu  convert_avx.cpp  convert_avx2.cpp  focus.cpp  focus.h  focus_avx2.cpp  meson.build  resample.cu  resample_avx2.cpp  resample_functions.h  turn.cpp
GRunT/: GRunT.rc  GRunT.vcxproj  GRunT.vcxproj.filters  GRunTversion.h
KDebugTool/: KDebugTool.rc  KDebugTool.vcxproj  KDebugTool.vcxproj.filters  KDebugToolversion.h
KFM/: CombingAnalyze.cu  Deblock.cu  DeblockAVX.cpp  DecombeUCF.cu  KDeband.cu  KFM.cpp  KFM.h  KFM.rc  KFM.vcxproj  KFM.vcxproj.filters  KFMFilterBase.cu  KFMFilterBase.cuh  KFMKernel.cu  KFMversion.h  MergeStatic.cu  SIMDSupport.hpp  meson.build
KTGMC/: CudaKernelBase.h  KTGMC.rc  KTGMC.vcxproj  KTGMC.vcxproj.filters  KTGMCversion.h  Kernel.cu  MV.cpp  MVKernel.cu  MVKernel.h  Misc.cpp  Misc.h  meson.build
KUtil/: KUtil.cpp  KUtil.h  KUtil.rc  KUtil.vcxproj  KUtil.vcxproj.filters  KUtilversion.h  meson.build
TestScripts/: KFMDeint.avsi
common/: CommonFunctions.h  DebugWriter.cpp  DeviceLocalData.cpp  Frame.h  KCommon.vcxproj  KVersion.h  ReduceKernel.cuh  VectorFunctions.cuh  meson.build  rgy_filesystem.cpp  rgy_osdep.h
docker/: docker_ubuntu2004_cuda11  docker_ubuntu2204_cuda11  docker_ubuntu2404_cuda12
include/: avisynth.h
include/avs/: config.h
plugins64+/: KFMDeint.avsi  KSMDegrain.avsi  KTGMC.avsi
scripts/: buildAviSynthCUDAFilters.sh  buildAviSynthPlusCUDA.sh
